# silentinjection

./: .gitignore  Cargo.toml  Makefile  README.md  analyze_hf_usage.py  analyze_hfscanner_data.py  report.csv  requirements.txt  resultss.csv  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
@examples/: test_all_types.py
@examples/test, with comma/: test_file.py
examples/org, with comma/repo "quoted"/: test.py
examples/project-1/repo-1/: mixed_unsafe.py  partially_safe_only.py
examples/project-2/repo-2/: unsafe_only.py
examples/project-3/repo-3/: mixed_partial.py  unsafe_only.py
examples/project-4/repo-4/: mixed_partial.py  safe_only.py
examples/project-4/safe-project/: safe_only.py
examples/test, with comma/: test_file.py
hftoken-site/: index.html  scatter-plot.js  styles.css
results/: hfscanner.csv
src/: main.rs
website/: GUIDE.md  README.md  index.html
