[package]
name = "hfscanner"
version = "0.1.0"
edition = "2024"
authors = ["Luke Hinds <luke@rdrocket.com>"]
description = "A tool to scan Hugging Face repositories for instances of unsafe model loading."

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"
regex = "1.11.1"
futures = "0.3.31"
tokio-stream = "0.1.17"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.8"

